--- a/wiki/AndroidBillingDocs.wiki
+++ b/wiki/AndroidBillingDocs.wiki
@@ -4,3 +4,4 @@
 
   * [http://developer.android.com/guide/market/billing/index.html In-app Billing]
   * [http://developer.android.com/guide/market/billing/billing_testing.html Testing In-app Billing]
+  * [http://developer.android.com/guide/market/billing/billing_reference.html In-app Billing Reference]
