--- a/wiki/AndroidBillingDocs.wiki
+++ b/wiki/AndroidBillingDocs.wiki
@@ -6,3 +6,4 @@
   * [WhyBillingServiceIsNeeded Why do we need a custom Service class?]
   * [http://developer.android.com/guide/market/billing/billing_testing.html Testing In-app Billing]
   * [http://developer.android.com/guide/market/billing/billing_reference.html In-app Billing Reference]
+  * [OfficialDocsMistakes Official documentation mistakes]
