Edited wiki page HowToParsePurchaseInPhp through web user interface.

--- a/wiki/HowToParsePurchaseInPhp.wiki
+++ b/wiki/HowToParsePurchaseInPhp.wiki
@@ -2,7 +2,7 @@
 
 = How to parse the purchase state in PHP? =
 
-The purchase state JSON contains 2 long values : "nonce" and "purchaseTime", which will overflow the PHP integer type if you try using 
+The purchase state JSON contains 2 long values : "nonce" and "purchaseTime", which will overflow the PHP integer type on 32-bit OS if you try using 
 <code language="php">
 $purchase = json_decode($json);
 </code>
@@ -11,3 +11,5 @@ If you have PHP >= 5.4.0, you can use :
 <code language="php">
 $purchase = json_decode($json, false, 512, JSON_BIGINT_AS_STRING);
 </code>
+
+On the previous PHP versions you can parse out "nonce" with a regular expression.
