--- a/wiki/HowToParsePurchaseInPhp.wiki
+++ b/wiki/HowToParsePurchaseInPhp.wiki
@@ -12,4 +12,9 @@ If you have PHP >= 5.4.0, you can use :
 $purchase = json_decode($json, false, 512, JSON_BIGINT_AS_STRING);
 </code>
 
-On the previous PHP versions you can parse out "nonce" with a regular expression.
+On the previous PHP versions you can parse out "nonce" with a regular 
+expression :
+<code language="php">
+if (preg_match('/"nonce"\s*:\s*(\d+)/', $json, $matches))
+  $nonce = $matches[1];
+</code>
