Edited wiki page HowToUseAndroidTestBilling through web user interface.

--- a/wiki/HowToUseAndroidTestBilling.wiki
+++ b/wiki/HowToUseAndroidTestBilling.wiki
@@ -26,3 +26,12 @@ Add the following to AndroidManifest.xml :
 }}}
 </code>
 This registers the test payment screen.
+
+== 3. Create the test service object ==
+As simple as :
+<code language="java">
+	private IMarketBillingService createMarketBillingService() {
+		return new com.android.vending.billing.test.TestMarketBillingService(this);
+	}
+
+</code>
