--- a/wiki/HowToUseAndroidTestBilling.wiki
+++ b/wiki/HowToUseAndroidTestBilling.wiki
@@ -11,10 +11,10 @@
 You have 2 options : reference the source code or reference the jar library.
 
 The simplest is to reference the jar :
-  * Download the latest distribution package from http://code.google.com/p/android-test-billing/downloads/list and copy it to your "lib" directory
+  * Download the latest distribution package from [http://code.google.com/p/android-test-billing/downloads/list Downloads] and copy it to your "lib" directory
   * Reference the jar in your Eclipse project (Project menu -> Properties -> Java Build Path -> Libraries -> Add JARs...)
 
-If you want to be able to debug, it's better to reference android-test-billing source code. Follow the instructions http://code.google.com/p/android-test-billing/source/checkout to download the code.
+If you want to be able to debug, it's better to reference android-test-billing source code. Follow the instructions [http://code.google.com/p/android-test-billing/source/checkout Source code] to download the code.
   * Checkout the code to your Eclipse workspace directory.
   * Add a reference from your main project (Project menu -> Properties -> Android -> Library -> Add)
 
@@ -38,7 +38,7 @@ As simple as :
 </code>
 
 == 4. Add the test code ==
-Add the test code as described in the documentation ([http://developer.android.com/guide/market/billing/billing_integrate.html] Implementing In-app Billing). You will need to create :
+Add the test code as described in the documentation ([http://developer.android.com/guide/market/billing/billing_integrate.html Implementing In-app Billing]). You will need to create :
   * a payment Activity (the screen where you select what to buy and proceed to the checkout)
   * a BroadcastReceiver (it receives the notifications from the Android Market application)
   * and a Service, which connects BroadcastReceiver and the payment Activity
