Edited wiki page HowToTestForProduction through web user interface.

--- a/wiki/HowToTestForProduction.wiki
+++ b/wiki/HowToTestForProduction.wiki
@@ -7,3 +7,4 @@ In order to do that you need to :
 
   # include .aidl
   # change service creation code
+  # follow the documentation steps about signing and publication
