--- a/wiki/HowToTestForProduction.wiki
+++ b/wiki/HowToTestForProduction.wiki
@@ -8,7 +8,8 @@ In order to do that you need to :
   # remove the android-test-billing library reference
   # include IMarketBillingService.aidl 
   # change service creation code
-  # follow the documentation steps about signing and publication
+  # sign and publish your application for testing
+  # test your application
 
 == 1. Remove the library reference ==
 Follow the same steps as you did to reference the library, and remove the reference on the android-test-billing library from the project.
@@ -16,25 +17,45 @@ Follow the same steps as you did to reference the library, and remove the refere
 == 2. Include IMarketBillingService.aidl ==
 Include IMarketBillingService.aidl file into the project to the src\com\android\vending\billing directory.
 
+<code language="java">
+package com.android.vending.billing;
+import android.os.Bundle;
+interface IMarketBillingService {
+    /** Given the arguments in bundle form, returns a bundle for results. */
+    Bundle sendBillingRequest(in Bundle bundle);
+}
+</code>
+
+You can download the file here :
+http://marketbilling.googlecode.com/hg-history/release_1/src/com/android/vending/billing/IMarketBillingService.aidl
+
 == 3. Change service creation code ==
 The real billing service object is created asynchronously : first you make a call to the Context.bindService() and pass a callback (ServiceConnection interface), then you receive a service instance through the callback. This may change your code.
-This is the code example :
+
+Here is the code example :
 <code language="java">
 {{{
-		Intent billingServiceBindIntent = new Intent("com.android.vending.billing.MarketBillingService.BIND"); 
+Intent billingServiceBindIntent = new Intent("com.android.vending.billing.MarketBillingService.BIND"); 
 
-		boolean bindResult = context.bindService(billingServiceBindIntent,
-			new ServiceConnection() {				
-				public void onServiceConnected(ComponentName name, IBinder serviceBinder) {
-					IMarketBillingService service = IMarketBillingService.Stub.asInterface(serviceBinder));
-					// user the service ...
-				}
-				public void onServiceDisconnected(ComponentName name) {
-					// handle the service disconnection ...			
-				}
-			}, Context.BIND_AUTO_CREATE);
-		if (!bindResult) {
-			// handle bindService() error
+boolean bindResult = context.bindService(billingServiceBindIntent,
+	new ServiceConnection() {				
+		public void onServiceConnected(ComponentName name, IBinder serviceBinder) {
+			IMarketBillingService service = IMarketBillingService.Stub.asInterface(serviceBinder));
+			// TODO: use the service ...
 		}
+		public void onServiceDisconnected(ComponentName name) {
+			// TODO: handle the service disconnection ...			
+		}
+	}, Context.BIND_AUTO_CREATE);
+if (!bindResult) {
+	// TODO: handle bindService() error ...
+}
+
 }}}
 </code>
+
+== 4. Sign and publish your application for testing ==
+Follow the documentation steps about signing and publication.
+
+== 5. Test your application ==
+Follow the documentation about testing your application.
