--- a/wiki/KnownProjects.wiki
+++ b/wiki/KnownProjects.wiki
@@ -1,4 +1,4 @@
-#summary Known projects which used android-test-billing library
+#summary Known projects which used android-test-billing library in development.
 
   * [http://www.horer.fr Horer.fr - horaires de RER] - timetables of local Parisien trains
   * [http://www.bestparking.com BestParking.com] - parking rates and locations catalog
