Edited wiki page KnownProjects through web user interface.

--- a/wiki/KnownProjects.wiki
+++ b/wiki/KnownProjects.wiki
@@ -2,3 +2,4 @@
 
   * [http://www.horer.fr Horer.fr - horaires de RER] - timetables of local Parisien trains
   * [http://www.bestparking.com BestParking.com] - parking rates and locations catalog
+  * [http://www.frozax.com/android Don't Feed the Trolls] - a game by Frozax Games
