Edited wiki page HowToUseAndroidTestBilling through web user interface.

--- a/wiki/HowToUseAndroidTestBilling.wiki
+++ b/wiki/HowToUseAndroidTestBilling.wiki
@@ -43,4 +43,4 @@ Add the test code as described in the documentation ([http://developer.android.c
   * a BroadcastReceiver (it receives the notifications from the Android Market application)
   * and a Service, which connects BroadcastReceiver and the payment Activity
 
-Don't add AIDL file to your project.
+Don't add IMarketBillingService.aidl file to your project, or it will conflict with the library.
